# Snake

./: .gitignore  1.app.js  Cargo.toml  README.md  app.js  index.html  index.html.ejs  index.js  old.rs  package-lock.json  package.json  rollup.config.js  webpack.development.js  webpack.production.js
.github/workflows/: ci.yml  deploy.yml
game/: Cargo.toml
game/src/: colors.rs  constants.rs  food.rs  game.rs  game_orchestrator.rs  game_orchestrator_factory.rs  lib.rs  logger.rs  models.rs  options.rs  renderer.rs  snake.rs  utils.rs
game/src/abstractions/: ai_controller.rs  canvas_provider.rs  document_provider.rs  frame_scheduler.rs  invoke_js.rs  mod.rs  renderer.rs  window_provider.rs
game/src/objects/: food.rs  mod.rs  obstacle.rs  snake.rs
game/src/randomizer/: js.rs  mod.rs  os.rs
public/: index.html
src/: game.rs  lib.rs  styles.rs  utils.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/public/: leaderboard.json
web/src/: App.test.tsx  App.tsx  Icons.tsx  Panel.tsx  Prompt.test.tsx  Prompt.tsx  Start.tsx  api.ts  hooks.ts  index.tsx  types.ts
web/src/components/: Icons.tsx  Panel.test.tsx  Panel.tsx  Prompt.tsx
web/src/lib/: api.ts  types.ts
