[package]
name = "snake-game"
version = "0.1.0"
authors = ["Jozef Podlecki <jozef.witold.podlecki@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "wasm32-unknown-unknown"

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.41"
base64 = "0.12.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'Document',
    'DomImplementation',
    'DomTokenList',
    'EventTarget',
    'Element',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'SvgImageElement',
    'CanvasRenderingContext2d',
    'HtmlElement',
    'MouseEvent',
    'KeyboardEvent',
    'KeyEvent',
    'TextMetrics',
    'Node',
    'Window'
]