[package]
name = "snake-game"
version = "0.1.0"
authors = ["Jozef Podlecki <jozef.witold.podlecki@gmail.com>"]
edition = "2021"
rust-version = "1.84.0"

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.41"
base64 = "0.12.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'Document',
    'DomImplementation',
    'DomTokenList',
    'EventTarget',
    'Element',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'SvgImageElement',
    'CanvasRenderingContext2d',
    'HtmlElement',
    'MouseEvent',
    'KeyboardEvent',
    'KeyEvent',
    'TextMetrics',
    'Node',
    'Window',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlBuffer',
    'WebGlUniformLocation',
    'WebGlTexture',
    'WebGlFramebuffer',
    'WebGlRenderbuffer'
]
